app/assets/stylesheets/navbar.css.less
@import "twitter/bootstrap/variables";
@import "twitter/bootstrap/mixins";

.navbar {
  .divider-vertical {
    .opacity(70);
  }

  .brand {
    font-family: "Pacifico";
    color: @grayLighter;
    font-size: 20px;
    line-height: 20px;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    .transition(text-shadow .4s ease-out);

    &:hover {
      color: white;
      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25),
                   0 0 25px rgba(222, 231, 238, 0.8);
    }
  }
}

.brand-logo {
  position: relative;
  display: inline-block;
  top: 4px;
  .size(15px, 38px);
  vertical-align: top;
}

#user-navbar-info {
  a {
    display: inline-block;
  }

  .navbar-profile-picture {
    position: relative;
    border: 1px solid @grayLighter;
    padding: 0;
    .square(25px);

    &:hover {
      border: 1px solid @white;
    }
  }
}

@media (min-width: 768px) {
  #user-navbar-info {
    .navbar-profile-picture {
      top: -1px;
    }

    .navbar-profile-name {
      padding-left: 5px;
    }
  }
}

@media (max-width: 767px) {
  #user-navbar-info {
    .navbar-profile-picture {
      top: 5px;
      .square(30px);
    }
  }

  #navbar-notifications-list {
    margin-left: 80px;
  }
}

.notifications {
  position: relative;
  line-height: 17px;

  a {
    padding: 10px 10px 9px !important;
  }

  i {
    margin-top: 2px;
    font-size: 20px;
    text-shadow: 0 1px 0px rgba(5, 18, 22, 0.85); /* darken(#16576b, 20%); */
  }

  &.read {
    i {
      color: rgba(5, 18, 22, 0.45);
      text-shadow: none;
    }
  }

  &.active i {
    color: @white;
  }

  .count {
    position: absolute;
    top: 3px;
    right: 4px;
    height: 12px;
    padding: 2px 5px;
    font-weight: bold;
    font-size: 10px;
    background: rgba(205, 0, 0, 0.8);
  }
}

.popover-ajax-content,
.popover-static-content {
  margin-bottom: 9px;
}

.popover-elements {
  font-size: 12px;

  a {
    display: table;
    width: 100%;
    color: @grayDark;
    text-decoration: none;

    &:hover {
      background: @grayLighter;
    }
  }

  li + li {
    margin-top: 5px;
    border-top: 1px solid #ccc;
    padding-top: 5px;
  }

  .popover-element-avatar,
  .popover-element-content {
    display: table-cell;
    vertical-align: top;
  }

  .popover-element-avatar {
    width: 50px;
    padding-right: 5px;
  }

  .popover-element-content {
    max-width: 150px;
    overflow: hidden;
    line-height: 16px;
  }
}

